added nested sections to navbar

--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -20,6 +20,9 @@
             {{ $currentPage := . }}
             {{ range .Site.Home.Sections }}
               <li {{if eq $currentPage.Section .Section }} class="active"{{end}}><a class="sidebar-nav-item" href="{{.RelPermalink}}">{{ .Title }}</a></li>
+              {{ range .Sections }}
+                <li><a class="sidebar-nav-item" href="{{.RelPermalink}}">&nbsp;&nbsp;{{ .Title }}</a></li>
+              {{ end }}
             {{ end }}
           </ul>
         </li>
