limit dropdown length, add correct highlighting for active nested section

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -38,6 +38,10 @@ td.count {vertical-align:top;padding-right: 2rem; text-align:right; font-weight:
   background-color: transparent;
   border-radius: 4px;
 }
+.dropdown-menu {
+  max-height: 540px;
+  overflow-y: auto;
+}
 </style>
 </head><body>
 <div class="hidden-print">{{ partial "navbar.html" . }}</div>
