added star ratings in data file

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -14,7 +14,7 @@
     {{ $.Scratch.Set "paginator" $paginator }}
      {{ partialCached "initials.html" . .Dir }}
     {{ range $paginator.Pages.ByTitle }}
-      <h3><a href="{{ .RelPermalink }}">{{ .Title | safeHTML | markdownify }}</a></h3>
+      <h3><a href="{{ .RelPermalink }}">{{ .Title | safeHTML | markdownify }}</a> {{ partial "stars" . }}</h3>
     {{ end }}
     <div class="hidden-print" style="margin-top:-18px">{{ partial "pagination-ellipsed.html" . }}</div>
   {{ end }}
