--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -27,6 +27,9 @@
           </ul>
         </li>
         <li><a href="/random/">Random</a></li>
+        {{ with $.Site.Data.meta.search }}
+          <li><a href="{{ . }}">Search</a></li>
+        {{ end }}
       </ul>
         {{- $section := $.Site.GetPage "section" .Section -}}
         {{- with $.Site.GetPage "section" (trim .Dir "/") -}}
